[package]
name = "mov-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fzf-wrapped = "0.1.3"
gql_client = "1.0.7"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json", "cookies"] }
serde = "1.0.197"
serde_json = "1.0.114"
tempfile = "3.10.1"
termsize = "0.1.6"
text_io = "0.1.12"
tokio = { version = "1.36.0", features = ["rt"] }
