[package]
name = "mov-cli-rs"
description = "A CLI tool for scraping and playing TV, movies and anime."
authors = ["BzzzThe18th"]
version = "1.0.1"
repository = "https://github.com/BzzzThe18th/mov-cli-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "movies", "tv", "anime", "scraping"]
categories = ["command-line-interface", "command-line-utilities"]
edition = "2021"
exclude = [
    ".gitattributes",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fzf-wrapped = "0.1.3"
reqwest = { version = "0.11.24", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
termsize = "0.1.6"
text_io = "0.1.12"